# pi-rs

./: .gitignore  CLAUDE.md  Cargo.toml  DEVIATIONS.md  INTEGRATION_GUIDE.md  Makefile  PLANS.md  README.md  REPLICATION_PROGRESS.md  package-lock.json  package.json  pi-rust-port-spec.md
.claude/: settings.json
.claude/hooks/: block-git-danger.sh  check-contract-consistency.sh  check-contract-table.sh  check-unwrap.sh  verify-before-stop.sh
.codegraph/: .gitignore  daemon.pid
crates/pi-agent-core/: Cargo.toml  README.md
crates/pi-agent-core/src/: agent.rs  agent_loop.rs  extraction.rs  lib.rs  mcp.rs  pi_ai_types.rs  proxy.rs  types.rs
crates/pi-agent-core/src/harness/: agent_harness.rs  messages.rs  mod.rs  prompt_templates.rs  skill_loader.rs  skills.rs  system_prompt.rs  types.rs
crates/pi-agent-core/src/harness/compaction/: branch_summarization.rs  compaction.rs  mod.rs  utils.rs
crates/pi-agent-core/src/harness/env/: nodejs.rs
crates/pi-agent-core/src/harness/session/: jsonl_repo.rs  jsonl_storage.rs  memory_repo.rs  memory_storage.rs  mod.rs  repo_utils.rs
crates/pi-agent-core/src/harness/utils/: mod.rs  shell_output.rs  truncate.rs
crates/pi-agent-core/tests/: agent_loop_integration_test.rs  deepseek_integration_test.rs  e2e_test.rs  openrouter_integration_test.rs  tool_call_demo.rs
crates/pi-agent-core/tests/common/: mod.rs
crates/pi-ai/: Cargo.toml  README.md  build.rs
crates/pi-ai/src/: api_registry.rs  env_api_keys.rs  lib.rs  models.rs  models_generated.rs  stream.rs  types.rs
crates/pi-ai/src/providers/: anthropic.rs  deepseek.rs  mod.rs  openai.rs  register_builtins.rs  simple_options.rs  xai.rs
crates/pi-ai/src/utils/: diagnostics.rs  event_stream.rs  headers.rs  json_parse.rs  mod.rs  overflow.rs  session_resources.rs  sse.rs  typebox_helpers.rs  validation.rs
crates/pi-ai/tests/: connection_test.rs  openrouter_integration_test.rs  streaming_test.rs
crates/pi-cli/: Cargo.toml
crates/pi-cli/src/: args.rs  file_processor.rs  initial_message.rs  lib.rs  list_models.rs  main.rs  package_manager_cli.rs  run.rs
crates/pi-coding-agent/: CONTRACT_ALIGNMENT.md  Cargo.toml
crates/pi-coding-agent/src/: config.rs  lib.rs  main.rs  migrations.rs  pi_ai_types.rs
crates/pi-coding-agent/src/cli/: args.rs  file_processor.rs  initial_message.rs  list_models.rs  mod.rs  package_manager_cli.rs  run.rs
crates/pi-coding-agent/src/core/: DEVIATIONS.md  agent_session.rs  agent_session_runtime.rs  agent_session_services.rs  auth_guidance.rs  auth_storage.rs  bash_executor.rs  compaction.rs  context_usage.rs  defaults.rs  diagnostics.rs  env_api_keys.rs  event_bus.rs  exec.rs  experimental.rs  extensions.rs  footer_data_provider.rs  http_dispatcher.rs  messages.rs  mod.rs  model_registry.rs  model_resolver.rs  output_guard.rs  package_manager.rs  project_trust.rs  prompt_templates.rs  provider_attribution.rs  provider_display_names.rs  resolve_config_value.rs  resource_loader.rs  sdk.rs  session_cwd.rs  session_manager.rs  settings_manager.rs  skills.rs  slash_commands.rs  source_info.rs  system_prompt.rs  telemetry.rs  timings.rs  (+1 more)
crates/pi-coding-agent/src/core/extensions/: api.rs  dispatcher.rs  loader.rs  mod.rs  ops.rs  rpc.rs  runtime.js  runtime.rs  types.rs
crates/pi-coding-agent/src/core/tools/: bash.rs  edit.rs  edit_diff.rs  file_mutation_queue.rs  find.rs  grep.rs  ls.rs  mod.rs  output_accumulator.rs  path_utils.rs  read.rs  render_utils.rs  tool_definition_wrapper.rs  truncate.rs  write.rs
crates/pi-coding-agent/src/modes/: agent_bridge.rs  interactive.rs  mod.rs  print_mode.rs
crates/pi-coding-agent/src/modes/rpc/: handler.rs  jsonl.rs  mod.rs  rpc_types.rs
crates/pi-coding-agent/src/utils/: ansi.rs  changelog.rs  child_process.rs  deprecation.rs  frontmatter.rs  fs_watch.rs  git.rs  html.rs  json.rs  mime.rs  mod.rs  open_browser.rs  paths.rs  pi_user_agent.rs  shell.rs  sleep.rs  tools_manager.rs  version_check.rs
crates/pi-coding-agent/tests/: agent_session_runtime_test.rs  e2e_test.rs  embedded_runtime_test.rs  extensions_e2e_test.rs  extensions_test.rs  sdk_integration_test.rs  sdk_test.rs  skills_test.rs  tools_test.rs
crates/pi-extension-api/: Cargo.toml
crates/pi-extension-api/src/: hook.rs  lib.rs
crates/pi-extensions/: Cargo.toml
crates/pi-extensions/src/: goal.rs  hypa.rs  lib.rs  web_access.rs
crates/pi-tui/: AUDIT.md  Cargo.toml  README.md  plans.md
crates/pi-tui/src/: app.rs  autocomplete.rs  editor_component.rs  fuzzy.rs  highlighting.rs  keybindings.rs  keymap.rs  keys.rs  kill_ring.rs  lib.rs  native_modifiers.rs  stdin_buffer.rs  terminal.rs  tui.rs  undo_stack.rs  utils.rs  word_navigation.rs
crates/pi-tui/src/components/: ai_chat.rs  box_component.rs  cancellable_loader.rs  code_diff.rs  completer.rs  diff.rs  editor.rs  image.rs  input.rs  loader.rs  markdown.rs  mod.rs  select_list.rs  settings_list.rs  spacer.rs  text.rs  truncated_text.rs
docs/: agent-session-alignment-remaining.md  deno-core-extension-migration-progress.md  extension-test-coverage.md  pi-agent-core-alignment-audit.md  pi-agent-core-dead-code-audit.md  session-replication-progress.md  skill-extension-replication-progress.md
docs/superpowers/plans/: 2026-07-07-alignment-plan.md  2026-07-13-extension-alignment-plan.md
docs/superpowers/reviews/: 2026-07-13-extension-alignment-review.md
docs/superpowers/specs/: 2026-07-07-alignment-spec.md  2026-07-13-extension-alignment-spec.md
rpc-host/: package.json
rpc-host/src/: index.ts
src/: agent.rs  pi_ai_types.rs  proxy.rs  types.rs
src/harness/: messages.rs  mod.rs  prompt_templates.rs  skill_loader.rs  system_prompt.rs  types.rs
src/harness/compaction/: mod.rs
src/harness/env/: nodejs.rs
src/harness/session/: memory_repo.rs  memory_storage.rs  mod.rs  repo_utils.rs
src/harness/utils/: shell_output.rs
