[workspace]

# NOTE: pi-tui is temporarily excluded from the workspace members because its
# ratatui 0.29 dependency hard-pins unicode-width =0.2.0. Re-add "crates/pi-tui"
# to members once pi-tui upgrades to ratatui 0.30.
members = [
    "crates/pi-agent-core",
    "crates/pi-ai",
    "crates/pi-extension-api",
    "crates/pi-coding-agent",
    "crates/pi-extensions",
    "crates/pi-cli",
]


resolver = "2"
# Centralized dependency declarations. Member crates inherit via
# `dep = { workspace = true }` (optionally adding crate-specific features), so
# versions are managed in one place. Deps that differ meaningfully across
# crates (e.g. reqwest's feature/default-flags matrix) stay per-crate.

[workspace.package]
version = "1.79.27"
edition = "2021"
license = "MIT"
authors = ["oouxx"]
[workspace.dependencies]
# Internal crates
pi-ai = { path = "crates/pi-ai" }
pi-agent-core = { path = "crates/pi-agent-core" }
pi-extension-api = { path = "crates/pi-extension-api" }
pi-coding-agent = { path = "crates/pi-coding-agent" }
pi-extensions = { path = "crates/pi-extensions" }

# Shared external dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
regex = "1"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"
