[package]
name = "pi-agent-core"
version = "0.1.0"
edition = "2021"
description = "General-purpose agent with transport abstraction, state management, and attachment support (Rust port of @earendil-works/pi-agent-core)"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
serde_yaml = "0.9"

[dev-dependencies]