[package]
name = "pi-agent-core"
version = "1.78.0"
edition = "2021"
description = "General-purpose agent with transport abstraction, state management, and attachment support (Rust port of @earendil-works/pi-agent-core)"
license = "MIT"

[dependencies]
pi-ai = { path = "../pi-ai" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
serde_yaml = "0.9"
regex = "1"
schemars = { version = "0.8", optional = true, features = ["derive"] }
rmcp = { version = "1.7", optional = true, default-features = false, features = ["client", "transport-child-process"] }

[features]
default = ["extraction"]
extraction = ["dep:schemars"]
mcp = ["dep:rmcp"]

[dev-dependencies]
