[package]
name = "pi-agent-core"
version = "1.78.0"
edition = "2021"
description = "General-purpose agent with transport abstraction, state management, and attachment support (Rust port of @earendil-works/pi-agent-core)"
license = "MIT"

[dependencies]
pi-ai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v7"] }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tempfile = { workspace = true }
serde_yaml = "0.9"
regex = { workspace = true }
schemars = { version = "0.8", optional = true, features = ["derive"] }
rmcp = { version = "1.7", optional = true, default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }

[features]
default = ["extraction"]
extraction = ["dep:schemars"]
mcp = ["dep:rmcp"]

[dev-dependencies]