[package]
name = "pi-ai"
version = "1.78.0"
edition = "2021"
description = "Thin wrapper around rig-core providers, implementing pi's AI package (Rust port of @earendil-works/pi-ai)"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
chrono = { workspace = true }
regex = { workspace = true }

[build-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }