[package]
name = "pi-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Thin wrapper around rig-core providers, implementing pi's AI package (Rust port of @earendil-works/pi-ai)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
chrono = { workspace = true }
regex = { workspace = true }

[build-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
