[package]
name = "pi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary for pi-coding-agent — argument parsing, run orchestration, and terminal output"

[dependencies]
pi-coding-agent = { workspace = true }
pi-agent-core = { workspace = true }
pi-ai = { workspace = true }
pi-extensions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
colored = "3"
base64 = "0.22"
image = "0.25"

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
interactive = []
