[package]
name = "pi-coding-agent"
version = "1.78.0"
edition = "2021"
description = "Coding agent CLI with read/bash/edit/write tools and session management (Rust port of @earendil-works/pi-coding-agent)"
license = "MIT"

[dependencies]
pi-agent-core = { path = "../pi-agent-core" }
pi-ai = { path = "../pi-ai" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
glob = "0.3"
regex = "1"
dirs = "6"
similar = "2"
unicode-normalization = "0.1"
url = "2"
fs2 = "0.4"
colored = "3"
# pi-tui / crossterm temporarily removed — see [features] note below.
# pi-tui = { path = "../pi-tui" }
# crossterm = "0.28"
base64 = "0.22"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
# Embedded JS/TS extension runtime (replaces the Bun sidecar).
# deno_core pulls in V8 (prebuilt static libv8 on macOS arm64) + the swc-based
# deno_ast transpiler. deno_error is the error trait deno_core ops return.
deno_core = "0.404"
deno_ast = { version = "0.53", features = ["transpiling"] }
deno_error = "0.7"

[features]
# Interactive TUI mode is decoupled from the extension runtime. The pi-tui /
# crossterm dependencies are currently removed because pi-tui's ratatui 0.29
# hard-pins unicode-width =0.2.0, which conflicts with deno_ast's swc_common.
# Re-add `interactive = ["pi-tui", "crossterm"]` (and the two dep lines above as
# non-optional) once pi-tui upgrades to ratatui 0.30. The interactive mode code
# stays gated behind `#[cfg(feature = "interactive")]` and is inert until then.
default = []
interactive = []

[dev-dependencies]
tempfile = "3"
