[package]
name = "pi-coding-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Coding agent CLI with read/bash/edit/write tools and session management (Rust port of @earendil-works/pi-coding-agent)"


[dependencies]
pi-agent-core = { workspace = true }
pi-ai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
glob = "0.3"
regex = { workspace = true }
dirs = "6"
similar = "2"
unicode-normalization = "0.1"
url = "2"
fs2 = "0.4"
colored = "3"
base64 = "0.22"
# reqwest bumped 0.11 -> 0.12 to align with pi-ai / pi-agent-core (usage is
# limited to Client::builder + get/send/json, which is stable across the bump).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# deno_core removed — extensions are now native Rust crates (see extensions::api)

[features]
# Interactive TUI mode. The pi-tui / crossterm dependencies are currently removed
# because pi-tui's ratatui 0.29 hard-pins unicode-width =0.2.0. Re-add once pi-tui
# upgrades to ratatui 0.30. The interactive mode code stays gated behind
# `#[cfg(feature = "interactive")]` and is inert until then.
default = []
interactive = []

[dev-dependencies]
tempfile = { workspace = true }
