[package]
name = "pi-extensions"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust native extensions for pi-rs (pi-goal, pi-hypa, pi-web-access)"

[dependencies]
pi-extension-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
regex = { workspace = true }
