[package]
name = "pi-tui"
version = "1.78.0"
edition = "2021"
description = "Terminal UI framework with ratatui-based rendering, component tree, and keyboard handling (Rust port of @earendil-works/pi-tui)"
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["sync", "macros", "rt", "io-std", "time", "signal"] }
futures = "0.3"
unicode-width = "0.2"
unicode-segmentation = "1.12"
regex-lite = "0.1"
pulldown-cmark = { version = "0.13", default-features = false }
thiserror = "2"
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25"
fuzzy-matcher = "0.3.7"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
