[package]
name = "pi-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI framework — Elm architecture on ratatui (Rust port of @earendil-works/pi-tui)"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui-markdown = { version = "0.3", features = ["highlight-lang-all"] }
unicode-width = "0.2"
tokio = { version = "1", features = ["sync", "macros", "rt", "io-std", "time", "signal"] }
futures = "0.3"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
similar = "2"
nucleo-matcher = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
